--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alpaca-trade-api==0.51.0
 certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
@@ -8,7 +9,10 @@ python-dateutil==2.8.1
 python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
+scipy==1.5.3
 six==1.15.0
 SQLAlchemy==1.3.19
 urllib3==1.25.10
+websocket-client==0.57.0
+websockets==8.1
 xtermcolor==1.3
