--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
 scipy==1.5.3
+sentry-sdk==0.19.1
 six==1.15.0
 SQLAlchemy==1.3.19
 urllib3==1.25.10
