--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
 intrinio-sdk==5.6.1
+lxml==4.6.2
 numpy==1.19.2
 pandas==1.1.2
 python-dateutil==2.8.1
 python-dotenv==0.14.0
+python-http-client==3.3.2
 pytz==2020.1
 requests==2.24.0
 scipy==1.5.3
@@ -14,6 +16,7 @@ sendgrid==6.6.0
 sentry-sdk==0.19.1
 six==1.15.0
 SQLAlchemy==1.3.19
+starkbank-ecdsa==1.1.0
 urllib3==1.25.10
 websocket-client==0.57.0
 websockets==8.1
