update strategy to include rotate bear etfs

--- a/algo_settings.cfg
+++ b/algo_settings.cfg
@@ -13,7 +13,10 @@ score_exclude_days = 5
 # days in a year
 score_window_days = 200
 
+bear_score_exclude_days = 0
+bear_score_window_days = 20
+
 # ETFs
 market=SPY
 cash=SHY
-bear_etf=IEF
+bear_etfs=IEI,IEF,TLH,TLT
