fixed bugs with removing stocks that don't have momentum anymore

--- a/algo_settings.cfg
+++ b/algo_settings.cfg
@@ -17,6 +17,10 @@ bear_score_exclude_days = 0
 bear_score_window_days = 20
 
 # ETFs
+# large-cap
 market=SPY
+
+# mid-cap
+#market=SPMD
 cash=SHY
 bear_etfs=IEI,IEF,TLH,TLT
