--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-alpaca-trade-api = "*"
-boto3 = "*"
+alpaca-trade-api = "==3.0.2"
+boto3 = "==1.28.2"
 pandas = "==1.5.3"
-sentry-sdk = "*"
+sentry-sdk = "==1.28.0"
 xtermcolor = "*"
 sqlalchemy = "==1.3.19"
-python-dotenv = "*"
-lxml = "*"
-scipy = "*"
+python-dotenv = "==1.0.0"
+lxml = "==4.9.3"
+scipy = "==1.11.1"
 
 [dev-packages]
 
