--- a/algo_settings.cfg
+++ b/algo_settings.cfg
@@ -8,19 +8,10 @@ portfolio_size = 20
 
 minimum_score_momentum = 40
 
-score_exclude_days = 5
 
 # days in a year
-score_window_days = 125
+slope_window_days = 125
 
-bear_score_exclude_days = 0
-bear_score_window_days = 20
-
-# ETFs
-# large-cap
-market=SPY
-
-# mid-cap
-#market=SPMD
-cash=SHY
-bear_etfs=IEI,IEF,TLH,TLT
+maximum_near_high = 0.8
+maximum_market_mean_percent_difference = 0.05
+max_stock_gap = 0.15
