--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,16 @@ authors = ["Moses McCall <mosesmc52@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
-alpaca-trade-api = "^3.2.0"
-boto3 = "^1.34.125"
-pandas = "^2.2.2"
+python = "^3.11"
+pandas = "1.5.3"
+sqlalchemy = "1.3.19"
+boto3 = "^1.34.126"
 sentry-sdk = "^2.5.1"
 xtermcolor = "^1.3"
-sqlalchemy = "1.3.19"
 python-dotenv = "^1.0.1"
-lxml = "^5.2.2"
 scipy = "^1.13.1"
+alpaca-trade-api = "^3.2.0"
+lxml = "^5.2.2"
 
 
 [build-system]
