--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-pandas = "1.5.3"
+pandas = "^2.2.2"
 sqlalchemy = "1.3.19"
 boto3 = "^1.34.126"
 sentry-sdk = "^2.5.1"
