--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pandas = "^2.2.2"
-sqlalchemy = "1.3.19"
 boto3 = "^1.34.126"
 sentry-sdk = "^2.5.1"
 xtermcolor = "^1.3"
@@ -16,6 +15,7 @@ python-dotenv = "^1.0.1"
 scipy = "^1.13.1"
 alpaca-trade-api = "^3.2.0"
 lxml = "^5.2.2"
+sqlalchemy = "^2.0.41"
 
 
 [build-system]
